# Compilacion_codigos

./: CMakeLists.txt  Lista_doble_diccionario.c  Lista_doble_diccionario.h  Lista_simplemente_diccionario.c  Lista_simplemente_diccionario.h  README.md  arboles.c  arboles.h  lista_circular_diccionario.c  lista_circular_diccionario.h  lista_doble_circular_diccionario.c  lista_doble_circular_diccionario.h  lista_estatica_circular.c  lista_estatica_circular.h  main.c
